[tool.poetry]
name = "todo-project-name"
version = "0.1.0"
description = ""
authors = ["Jakub Kaczor <262257@student.pwr.edu.pl>"]
readme = "README.md"
packages = [{include = "todo_project_name"}]

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pyside6 = "^6.4.1"
bitarray = ">=2.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
hypothesis = "^6.61.0"
sympy = "^1.11.1"
mypy = "^0.991"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
